[project]
name = "llm-mlc"
version = "0.1a0"
description = "LLM plugin for running models using MLC"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-mlc"
Changelog = "https://github.com/simonw/llm-mlc/releases"
Issues = "https://github.com/simonw/llm-mlc/issues"
CI = "https://github.com/simonw/llm-mlc/actions"

[project.entry-points.llm]
mlc = "llm_mlc"

[project.optional-dependencies]
test = ["pytest"]
